@@ -1,4 +1,4 @@
-# This file was generated by ViZDoom 1.1.0 (ZDOOM 2.8.1) on Sun Feb 19 22:08:57 2017
+# This file was generated by ViZDoom 1.1.0 (ZDOOM 2.8.1) on Wed Feb 22 21:53:57 2017
 
 # These are the directories to automatically search for IWADs.
 # Each directory should be on a separate line, preceded by Path=
@@ -294,7 +294,7 @@ crosshairscale=false
 crosshairhealth=true
 crosshaircolor=ff 00 00
 crosshairforce=false
-crosshair=1
+crosshair=0
 st_scale=true
 paletteflash=0
 hudcolor_stats=3
