@@ -11,9 +11,9 @@ living_reward = -1
 screen_resolution = RES_160x120
 depth_buffer_enabled = true
 screen_format = CRCGCB
-render_hud = true
+render_hud = false
 render_minimal_hud = true
-render_crosshair = true
+render_crosshair = false
 render_weapon = false
 render_decals = false
 render_effects_sprites = false
@@ -25,7 +25,7 @@ render_messages = false
 episode_start_time = 14
 
 # make episodes finish after 500 actions (tics)
-episode_timeout = 500
+episode_timeout = 300
 
 # available buttons
 available_buttons =
