@@ -15,7 +15,7 @@ depth_buffer_enabled = true
 screen_format = CRCGCB
 render_hud = false
 render_minimal_hud = true
-render_crosshair = true
+render_crosshair = false
 render_weapon = false
 render_decals = false
 render_effects_sprites = false
